--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>My first Blog</title>
-        <link rel="stylesheet" href="Anna.css">
+        <link rel="stylesheet" href="https://github.com/gxc-international-innovation-challenge/Team-35/blob/main/docs/index.css">
     </head>
     <body>
         <header>
